--- a/index.html
+++ b/index.html
@@ -3,15 +3,37 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>RPG Hunt</title>
+    <title>I am Shuan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Overlock" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    
+    <!-- Carousel -->
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+
     <style>
+        html {
+            overflow: overlay;
+        }
+
         body {
-            min-height: 90vh;
+            width: 100vw;
+            height: 100vh;
+            min-height: 568px;
+            min-width: 320px;
+            margin: 0;
+            padding: 0;
+            font-family: 'Overlock', cursive;
+            background-color: grey;
         }
         #main {
-            height: 100%;
             width: 100%;
+            height: 100%;
         }
     </style>
 </head>
