Added skeletons for all pages

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             margin: 0;
             padding: 0;
             font-family: 'Overlock', cursive;
-            background-color: grey;
+            background-color: #dcdcdc;
         }
+        
         #main {
             width: 100%;
             height: 100%;
